<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/topNewsFragment"
        android:title="@string/tab_title_top_news"
        android:enabled="true"
        android:icon="@drawable/baseline_hourglass_top_24"/>

    <item android:id="@+id/worldNewsFragment"
        android:title="@string/tab_title_world_news"
        android:enabled="true"
        android:icon="@drawable/baseline_world_24"/>

    <item android:id="@+id/bookmarksFragment"
        android:title="@string/tab_title_bookmarks"
        android:enabled="true"
        android:icon="@drawable/baseline_bookmark_24"/>

    <item android:id="@+id/moreNewsFragment"
        android:title="@string/tab_title_more_news"
        android:enabled="true"
        android:icon="@drawable/baseline_more_horiz_24"/>

</menu>